--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -1,4 +1,4 @@
-<app-header></app-header>>
+<app-header></app-header>
 
 <ion-content>
   <ion-title class='ion-text-center coming-social' color="light" >
