--- a/beauty-app/src/app/pages/car-shop/car-shop.page.scss
+++ b/beauty-app/src/app/pages/car-shop/car-shop.page.scss
@@ -1,3 +1,5 @@
 .coming-car-shop{
-    padding-top: 10rem;
-}
+    padding-top: 5rem;
+        font-family: 'bioliquidregular';
+        font-size:40px;
+       }
