--- a/beauty-app/src/app/pages/inicio/inicio.page.html
+++ b/beauty-app/src/app/pages/inicio/inicio.page.html
@@ -51,7 +51,7 @@
       <ion-col size="12" size-lg="8" size-md="8" class="ion-text-center">
           <ion-icon name="logo-facebook" size="large" color="light" class="redes"></ion-icon>
           <ion-icon name="logo-instagram" size="large" color="light" class="redes"></ion-icon>
-          <ion-button (click)="Login()">
+          <ion-button >
             <ion-icon name="logo-googleplus" size="large" color="light" class="redes"></ion-icon>
           </ion-button>
       </ion-col>
