--- a/beauty-app/src/app/pages/tabs/tabs.page.html
+++ b/beauty-app/src/app/pages/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="home"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="shop">
       <ion-icon name="apps"></ion-icon>
