--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -17,7 +17,7 @@
 
 
 <ion-grid fixed *ngIf="plans">
-    <ion-row *ngFor="let data of plans">
+    <ion-row *ngFor="let data of plans" (click)="getDetail(data)">
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
             <img src="assets/img/pyp/{{data.img_plan}}" class="plans">
