Terms and Conditions - FAQ 90%
terminos y condiciones sin texto original

--- a/beauty-app/src/app/pages/terms/terms.page.html
+++ b/beauty-app/src/app/pages/terms/terms.page.html
@@ -1,23 +1,29 @@
 
 <ion-content>
-  <img class="logo-terms" src="assets/logo/whiteLogoH.png">
+  <ion-row>
+    <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+  <ion-col size="12" size-sm="12" size-md="6" size-lg="6">
+<img class="logo-terms" src="assets/logo/whiteLogoH.png">
+  </ion-col>
+    <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+</ion-row>
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="12" size-md="4" size-lg="4"></ion-col>
-    <ion-col size="12" size-sm="12" size-md="4" size-lg="4">
+      <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+    <ion-col size="12" size-sm="12" size-md="6" size-lg="6">
   
 <ion-card>
  <ion-list lines='full'>
   <div *ngFor="let item of termsContent; let i = index">
-    <ion-item (click)="showText(i)" class="border-terms">
+    <ion-item (click)="showText(i)">
         <ion-label >
           {{item.title}}
         </ion-label>
         <ion-icon slot="end" name="ios-arrow-up" *ngIf='item.state'></ion-icon>
         <ion-icon slot="end" name="ios-arrow-down" *ngIf='!item.state' ></ion-icon>
     </ion-item>  
-    <div *ngIf='item.state'>
-      <p class="font ion-padding">{{item.text}}</p>
+    <div class="border-terms">
+      <p *ngIf='item.state' class="font ion-padding">{{item.text}}</p>
     </div>
   </div>
   
@@ -26,7 +32,7 @@
 </ion-list>
 </ion-card>
 </ion-col>
-<ion-col size="12" size-sm="12" size-md="4" size-lg="4"></ion-col>
+<ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
 </ion-row>
 </ion-grid>
 </ion-content>  
