--- a/beauty-app/src/app/pages/faq/faq.page.html
+++ b/beauty-app/src/app/pages/faq/faq.page.html
@@ -1,9 +1,35 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Faq</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
 
-</ion-content>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+          <ion-col size="12" size-sm="12" size-md="6" size-lg="6">
+      <img class="logo-faq" src="assets/logo/whiteLogoH.png">
+          </ion-col>
+            <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+      </ion-row>
+      <ion-row>
+    <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+    <ion-col size="12" size-sm="12" size-md="6" size-lg="6">
+      <ion-card>
+        <ion-list lines='full'>
+        <div *ngFor="let item of faqContent; let i = index">
+          <ion-item (click)="showText(i)" >
+        <ion-label >
+          {{item.title}}
+        </ion-label>
+            <ion-icon slot="end" name="ios-arrow-up" *ngIf='item.state'></ion-icon>
+            <ion-icon slot="end" name="ios-arrow-down" *ngIf='!item.state' ></ion-icon>
+          </ion-item>  
+          <div class="border-faq">
+            <p *ngIf='item.state' class="font ion-padding" [innerHtml]="item.text"></p>
+          </div>
+        </div>
+        </ion-list>
+      </ion-card>
+    </ion-col>
+    <ion-col size="12" size-sm="12" size-md="3" size-lg="3"></ion-col>
+      </ion-row>
+    </ion-grid>
+</ion-content>  
+
