--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>deposit</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
+      <ion-col size="12" size-sm="12" size-md="6" size-lg="4">
+        <div>
+          <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="">
+        </div>
+        <h3 class="ion-text-center">B u y N o w</h3>
+        <img class="img-depos" src="assets/img/pyp/3dplan.jpg" alt="" srcset="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dicta nam esse sit provident ea repellat quos
+          iste, minus est impedit quis quas accusantium assumenda magnam incidunt quam, labore vero.</p>
+        <h4 class="ion-text-center">$500 USD</h4>
+        <ion-button expand="block" class="button-pay">Make Deposit</ion-button>
+        <!-- <p class="ion-text-center dec" routerLink="/terms">Terms and conditions</p> -->
+      </ion-col>
+      <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
