--- a/beauty-app/src/app/pages/tabs/tabs.page.html
+++ b/beauty-app/src/app/pages/tabs/tabs.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="shop">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon ios="ios-basket" md="md-basket"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="social">
       <ion-icon name="cloud"></ion-icon>
