--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -1,55 +1,39 @@
 <app-header titulo="BeautyLab Plans"></app-header>
-
 <ion-content class="ion-padding">
-    <ion-grid fixed>
-        <ion-row>
-            <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
-            <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-                <ion-text color="light">
-                    <h1 class="ion-text-center home">P L A N S</h1>
-                    <h3 class="ion-text-center textCss">These are Our Plans</h3>
-                  </ion-text>
-            </ion-col>
-            <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
-        </ion-row>
-    </ion-grid>
-
-
-
-<ion-grid fixed>
+<ion-grid>
     <ion-row>
-        <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <img src="assets/img/pyp/{{plans.img_plan}}" class="plans">
-        </ion-col>
+      <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
+      <ion-col size="12" size-sm="12" size-md="6" size-lg="4">
+        <div>
+          <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="">
+        </div>
+        <h3 class="ion-text-center">B u y N o w</h3>
+        <img class="img-depos" src="assets/img/pyp/{{plans.img_plan}}" alt="" srcset="">
+        <h3 class="ion-text-center textCss">{{plans.nombre}}</h3>
+        <br>
+        <p>{{plans.descripcion}}</p>
+        <ion-grid fixed *ngIf="rooms">
+            <ion-row>
+                <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
+                    <ion-text color="light">
+                        <h3 class="ion-text-center textCss">Details Room</h3>
+                      </ion-text>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">Room:</ion-col>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{room.nombre}}</ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">comfort:</ion-col>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{room.comodidades}}</ion-col>
+            </ion-row>
+        </ion-grid>        
+        <h4 class="ion-text-center">$500 USD</h4>
+        <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
+      </ion-col>
+      <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
     </ion-row>
-    <ion-row>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">Plan:</ion-col>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{plans.nombre}}</ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">Description:</ion-col>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{plans.descripcion}}</ion-col>
-    </ion-row>
-
-</ion-grid>
-
-<ion-grid fixed *ngIf="rooms">
-    <ion-row>
-        <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <ion-text color="light">
-                <h3 class="ion-text-center textCss">Details Room</h3>
-              </ion-text>
-        </ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">Room:</ion-col>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{room.nombre}}</ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">comfort:</ion-col>
-        <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{room.comodidades}}</ion-col>
-    </ion-row>
-
-</ion-grid>
+  </ion-grid>
 
 </ion-content>
