faq-terms header, border change

--- a/beauty-app/src/app/components/header/header.component.html
+++ b/beauty-app/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
       <ion-menu-button color="primary" menu="first">
       </ion-menu-button>
     </ion-buttons>
-    <img src="../../../assets/img/horizontal_logo.png" class="img-header">
+    <img routerLink="/tabs/home" src="../../../assets/img/horizontal_logo.png" class="img-header">
     <ion-buttons slot="end">
       <ion-avatar routerLink="/profile">
         <img  class="header-style" src="/assets/img/PROFILEPICTURE.png">
