--- a/beauty-app/src/app/pages/faq/faq.page.scss
+++ b/beauty-app/src/app/pages/faq/faq.page.scss
@@ -10,5 +10,14 @@ font-size: 15px;
     max-width: 80%;
     border: 0;
     padding-left: 5rem;
-    padding-top: 2rem;
+}
+.img-header{
+    width: 50% !important;
+   
+}
+.border{
+    padding-bottom: unset;
+}
+.routertemporal{
+    color: white;
 }
