--- a/beauty-app/src/app/pages/terms/terms.page.html
+++ b/beauty-app/src/app/pages/terms/terms.page.html
@@ -13,7 +13,7 @@
     <ion-col size="12" size-sm="12" size-md="6" size-lg="6">
   
 <ion-card>
- <ion-list lines='full'>
+ <ion-list class="noborder" lines='full'>
   <div *ngFor="let item of termsContent; let i = index">
     <ion-item (click)="showText(i)">
         <ion-label >
@@ -21,7 +21,7 @@
         </ion-label>
         <ion-icon slot="end" name="ios-arrow-up" *ngIf='item.state'></ion-icon>
         <ion-icon slot="end" name="ios-arrow-down" *ngIf='!item.state' ></ion-icon>
-    </ion-item>  
+    </ion-item >  
     <div class="border-terms">
       <p *ngIf='item.state' class="font ion-padding">{{item.text}}</p>
     </div>
