--- a/beauty-app/src/app/components/menu/menu.component.scss
+++ b/beauty-app/src/app/components/menu/menu.component.scss
@@ -24,6 +24,7 @@ ion-menu {
 .bl-points{
   margin-bottom: 0rem;
   margin-top: 0.8rem;
+  padding-bottom: 0.5rem;
 }
 .img-user{
   border-radius: 1000rem;
@@ -46,4 +47,7 @@ ion-menu {
 }
 .bl-logo{
   width: 30px;
+}
+hr{
+  background: #d1d1d1;
 }
