--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -10,7 +10,7 @@
     </ion-slides>
     <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides-2">
         <ion-slide *ngFor="let item of plans">
-            <img src="assets/img/pyp/{{item}}"  alt="picture" routerLink="/deposit">
+            <img src="assets/img/pyp/{{item}}" class="img-plan"  alt="picture" routerLink="/deposit">
         </ion-slide>
     </ion-slides>
     <h3 class="ion-text-center">P R O C E D U R E S</h3>
