--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -24,7 +24,11 @@ h3{
 .pos-btn-slides-2{
     padding-bottom: 1.4rem;
 }
-
+.img-plan{
+    border-radius: 18px;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+  }
 
 
 
