--- a/beauty-app/src/app/pages/register/register.page.scss
+++ b/beauty-app/src/app/pages/register/register.page.scss
@@ -77,3 +77,8 @@ h1.home{
     display: block;
     margin: 0 auto;
 }
+.link-terms{
+    font-size: 11px;
+    text-decoration: underline;
+    color: #c8d9e7;
+}
