--- a/beauty-app/src/app/pages/register/register.page.html
+++ b/beauty-app/src/app/pages/register/register.page.html
@@ -58,6 +58,15 @@
             <ion-label>I confirmed im 18 years old.</ion-label>
           </ion-col>
         </ion-row>
+        <ion-row class="ion-text-center">
+          <ion-col size="2">
+            <ion-checkbox class="check ion-float-left" color="primary"></ion-checkbox>
+          </ion-col>
+          <ion-col size="10" class="padding-li ion-float-left">
+            <ion-label>Accept terms and conditions.</ion-label> <br>
+            <ion-label routerLink="/terms" class="link-terms">To read the terms and conditions, click here</ion-label>
+          </ion-col>
+        </ion-row>
         <ion-button expand="block" class="button-login" (click)="register()">REGISTER</ion-button>
       </ion-col>
       <ion-col size="0" size-md="2" size-lg="4"></ion-col>
