title, complete faq-terms

--- a/beauty-app/src/app/pages/car-shop/car-shop.page.scss
+++ b/beauty-app/src/app/pages/car-shop/car-shop.page.scss
@@ -1,6 +1,8 @@
-.coming-car-shop{
+
+h1{
+    font-family: 'bioliquidregular';
+    font-size:33px;
+    color:aliceblue;
+    text-align: center ;
     padding-top: 10rem;
-}
-h1,h2,h3,h4,h5,h6,p,label{
-    color: aliceblue;
-}
+   }
