--- a/beauty-app/src/app/pages/shop/shop.page.html
+++ b/beauty-app/src/app/pages/shop/shop.page.html
@@ -1,7 +1,4 @@
 <app-header titulo="BeautyLab Rooms"></app-header>
-
 <ion-content>
-    <ion-title class='ion-text-center coming-shop font-shop' color="light" >
-        COMING SOON!!!  
-    </ion-title>
+<h1> COMING SOON </h1>
 </ion-content>
