--- a/beauty-app/src/app/pages/shop/shop.page.scss
+++ b/beauty-app/src/app/pages/shop/shop.page.scss
@@ -1,5 +1,7 @@
-.coming-shop{
-        padding-top: 13rem;
+h1{
         font-family: 'bioliquidregular';
-        font-size:40px;
+        font-size:33px;
+        color:aliceblue;
+        text-align: center ;
+        padding-top: 10rem;
        }
