--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -1,7 +1,4 @@
 <app-header></app-header>
-
 <ion-content>
-  <ion-title class='ion-text-center coming-social' color="light" >
-    COMING SOON!!!  
-</ion-title>
+<h1> COMING SOON </h1>
 </ion-content>
