--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -6,7 +6,7 @@
       <ion-col class="content-img" size="12" size-md="8" size-lg="6">
         <div class="ion-text-center">
           <h2 class="font-title">Y o u r P r o f i l e</h2>
-          <img class="profile-img" src="assets/img/PROFILEPICTURE.png" alt="profileuser">
+          <img class="profile-img" src="assets/img/PROFILEPICTURE.png" alt="profileuser" (click)="presentActionSheet()">
           <h4>{{data.nombres}}</h4>
           <h5>{{data.email}}</h5>
         </div>      
