--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
@@ -1,5 +1,5 @@
 img.plans{
-    border-radius: 1em;
+    border-radius: 1.5rem;
     margin: 0 auto;
     width: 100%;
 }
@@ -10,6 +10,15 @@ h1.home{
 }
 
 .textCss{
-    font-family: sans-serif;
+    font-family: 'advent_promedium';
     size: 40px;
+}
+
+.txtdescription{
+    font-family: 'advent_promedium';
+    size: 28px;
+}
+
+.img-header{
+    width: 50% !important;
 }
