--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -55,7 +55,7 @@
                 </ion-col>
             </ion-row>
         </ion-grid>        
-        <h4 class="ion-text-center">$500 USD</h4>
+        <ion-text color="light"><h4 class="ion-text-center">$500 USD</h4></ion-text>
         <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
       </ion-col>
       <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
