--- a/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.html
+++ b/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.html
@@ -1,17 +1,28 @@
-<app-header titulo="BeautyLab Procedures"></app-header>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <img routerLink="/tabs/home" src="../../../assets/img/horizontal_logo.png" class="img-header">
+    <ion-buttons slot="end">
+      <ion-avatar routerLink="/profile">
+        <img  class="header-style" src="/assets/img/PROFILEPICTURE.png">
+      </ion-avatar>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 <ion-content class="ion-padding">
 <ion-grid>
     <ion-row>
       <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
       <ion-col size="12" size-sm="12" size-md="6" size-lg="4">
         <div>
-          <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="">
+         <ion-text color="light"><h2 class="ion-text-center textdescription">{{procedures.descripcion}}</h2></ion-text> 
         </div>
         <h3 class="ion-text-center">B u y N o w</h3>
-        <img class="img-depos" src="assets/img/pyp/{{procedures.imagen}}" alt="" srcset="">
-        <h3 class="ion-text-center textCss">{{procedures.nombre}}</h3>
+        <img class="plans" src="assets/img/pyp/{{procedures.imagen}}" alt="" srcset="">
+        <ion-text color="light"><h3 class="ion-text-center textCss">Description Procedure: <br> {{procedures.nombre}}</h3></ion-text>
         <br>
-        <p>{{procedures.descripcion}}</p>
         <ion-grid fixed *ngIf="rooms">
             <ion-row>
                 <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
@@ -21,15 +32,23 @@
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">Room:</ion-col>
-                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{room.nombre}}</ion-col>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
+                  <ion-text color="light"><p class="text-description">Room:</p></ion-text>
+                </ion-col>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
+                  <ion-text color="light"><p class="text-description"> {{room.nombre}}</p></ion-text>
+                </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">comfort:</ion-col>
-                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">{{room.comodidades}}</ion-col>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
+                  <ion-text color="light"><p class="text-description">comfort:</p></ion-text>
+                </ion-col>
+                <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
+                  <ion-text color="light"><p class="text-description">{{room.comodidades}}</p></ion-text>
+                </ion-col>
             </ion-row>
         </ion-grid>        
-        <h4 class="ion-text-center">$500 USD</h4>
+        <ion-text color="light"><h4 class="ion-text-center">$500 USD</h4></ion-text>
         <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
       </ion-col>
       <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
