--- a/beauty-app/src/app/pages/terms/terms.page.html
+++ b/beauty-app/src/app/pages/terms/terms.page.html
@@ -1,9 +1,11 @@
 <ion-header>
-    <ion-buttons>
-      <ion-back-button slot="start"></ion-back-button>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
     </ion-buttons>
+    <img src="../../../assets/img/horizontal_logo.png" class="img-hd">
+  </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-row>
     <ion-col
@@ -12,19 +14,6 @@
       size-md="3"
       size-lg="3"
     ></ion-col>
-
-    <ion-col
-      size="12"
-      size-sm="12"
-      size-md="6"
-      size-lg="6"
-    >
-      <img
-        class="logo-terms"
-        src="assets/logo/whiteLogoH.png"
-      >
-    </ion-col>
-
     <ion-col
       size="12"
       size-sm="12"
