--- a/beauty-app/src/app/pages/terms/terms.page.scss
+++ b/beauty-app/src/app/pages/terms/terms.page.scss
@@ -12,4 +12,15 @@
 }
 .noborder{
     padding-bottom: unset;
+}   
+.logo-terms{
+    max-width: 50%;
+    border: 0;
+    padding-bottom: 6px;
+    display: flex;
+    //margin: 0 auto;
+}
+.img-hd{
+    width: 40%;
+    margin-left: 24%;
 }
