--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -1,7 +1,7 @@
 <app-header titulo="BeautyLab HomeApp"></app-header>
 
 <ion-content class="background-bl ion-padding">
-    <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides">
+    <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides center">
         <img (click)="watch('xmkzpKhB8Y4')" class="img-hd" src="assets/img/party.png" alt="picture">
         <!-- <ion-button (click)="watch('xmkzpKhB8Y4')"><img src="assets/img/party.png"></ion-button> -->
 <!--         <ion-slide *ngFor="let item of videos">
