--- a/beauty-app/src/app/pages/register/register.page.scss
+++ b/beauty-app/src/app/pages/register/register.page.scss
@@ -2,6 +2,9 @@
     display: flex;
     margin: 0 auto;
 }
+.padd-top{
+    padding-top: 0.5rem;
+}
 .message{
     font-size: 40px;
     text-align: center;
