--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -1,13 +1,16 @@
 <app-header titulo="BeautyLab HomeApp"></app-header>
 
 <ion-content class="background-bl ion-padding">
-    <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides center">
-        <img (click)="watch('xmkzpKhB8Y4')" class="img-hd" src="assets/img/party.png" alt="picture">
-        <!-- <ion-button (click)="watch('xmkzpKhB8Y4')"><img src="assets/img/party.png"></ion-button> -->
-<!--         <ion-slide *ngFor="let item of videos">
-            <img (click)="viewVideo(item.video)" class="img-hd" src="assets/img/{{item.picture}}" alt="picture">
-        </ion-slide> -->
+    <ion-slides pager="true" [options]="slideOpts">
+        <ion-slide>
+            <img (click)="watch('xmkzpKhB8Y4')" class="img-hd" src="assets/img/home1.png" alt="picture">
+        </ion-slide>
+        <ion-slide>
+            <img (click)="watch('xmkzpKhB8Y4')" class="img-hd" src="assets/img/confidence.png" alt="picture">
+        </ion-slide>
     </ion-slides>
+    <hr><br>
+    <h3 class="ion-text-center">P L A N S</h3>
     <ion-slides pager="true" [options]="slideOpts" class="pos-btn-slides-2">
         <ion-slide *ngFor="let item of plans">
             <img src="assets/img/pyp/{{item}}" class="img-plan"  alt="picture" routerLink="/plans">
@@ -15,13 +18,13 @@
     </ion-slides>
     <h3 class="ion-text-center">P R O C E D U R E S</h3>
     <!-- <ion-slides pager="true" [options]="slideOpts"> -->
-            <ion-grid fixed>
-                <ion-row>
-                    <ion-col *ngFor="let img of proc" size="4" size-md="4" size-lg="4">
-                        <img src="assets/img/pyp/{{img}}" class="img-service" alt="service" routerLink="/procedures">
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
+    <ion-grid fixed class="center">
+        <ion-row>
+           <ion-col *ngFor="let img of proc" size="4" size-md="4" size-lg="4">
+               <img src="assets/img/pyp/{{img}}" class="img-service center" alt="service" routerLink="/procedures">
+           </ion-col>
+         </ion-row>
+    </ion-grid>
     <!-- </ion-slides> -->
     <h3 class="ion-text-center">T O U R I S T I C  P L A N S</h3>
     <ion-slides pager="true" [options]="slideOpts">
