--- a/beauty-app/src/app/pages/register/register.page.html
+++ b/beauty-app/src/app/pages/register/register.page.html
@@ -57,7 +57,7 @@
         </ion-row>
         <ion-row class="ion-text-center">
           <ion-col size="2">
-            <ion-checkbox class="check ion-float-left" color="primary"></ion-checkbox>
+            <ion-checkbox [(ngModel)]="adult" class="check ion-float-left" color="primary"></ion-checkbox>
           </ion-col>
           <ion-col size="10" class="padding-li ion-float-left">
             <ion-label>I confirmed im 18 years old.</ion-label>
@@ -65,7 +65,7 @@
         </ion-row>
         <ion-row class="ion-text-center">
           <ion-col size="2">
-            <ion-checkbox class="check ion-float-left" color="primary"></ion-checkbox>
+            <ion-checkbox [(ngModel)]="terms" class="check ion-float-left" color="primary"></ion-checkbox>
           </ion-col>
           <ion-col size="10" class="padding-li ion-float-left">
             <ion-label>Accept terms and conditions.</ion-label> <br>
