--- a/beauty-app/src/app/components/menu/menu.component.html
+++ b/beauty-app/src/app/components/menu/menu.component.html
@@ -29,6 +29,7 @@
         <ion-label class="font">{{c.name}}</ion-label>
         </ion-item> 
       </ion-menu-toggle>
+      <a routerLink="/about" color="light">DELETE ME LATER</a>
     </ion-list>
     <hr>
     <div class="settings">
