--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -29,6 +29,11 @@
         <br>
         <ion-text color="light"><h2 class="ion-text-center txtdescription">Description Plan: <br> {{plans.descripcion}}</h2></ion-text>
         <br>
+          <ion-calendar [(ngModel)]="data"
+            [type]="type"
+            [format]="'YYYY-MM-DD'">
+          </ion-calendar>
+          
         <ion-text color="light"><h1 class="ion-text-center home">B u y  N o w</h1></ion-text>
         <ion-grid fixed *ngIf="rooms">
             <ion-row>
