--- a/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.html
+++ b/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.html
@@ -23,6 +23,16 @@
         <img class="plans" src="assets/img/pyp/{{procedures.imagen}}" alt="" srcset="">
         <ion-text color="light"><h3 class="ion-text-center textCss">Description Procedure: <br> {{procedures.nombre}}</h3></ion-text>
         <br>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <ion-calendar [(ngModel)]="data"
+                [type]="type"
+                [format]="'YYYY-MM-DD'">
+              </ion-calendar>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
         <ion-grid fixed *ngIf="rooms">
             <ion-row>
                 <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
