--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
@@ -1,3 +1,10 @@
+.steps{
+    cursor: pointer;
+    color: aliceblue;
+}
+.r{
+    text-align: end;
+}
 img.plans{
     border-radius: 1.5rem;
     margin: 0 auto;
