--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -1,10 +1,10 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button slot="start"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
