--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -1,7 +1,7 @@
 <!-- <app-header titulo="BeautyLab Plans">
 </app-header> -->
 
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -14,7 +14,7 @@
 
     </ion-buttons>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
@@ -34,57 +34,20 @@
         </ion-text>
         <br>
         <ion-text color="light">
-          <h1 class="ion-text-center home">B u y N o w</h1>
+          <h1 class="ion-text-center title">
+            Schedule Appointment
+          </h1>
         </ion-text>
-          <ion-calendar [(ngModel)]="data"
-            [type]="type"
-            [format]="'YYYY-MM-DD'">
-          </ion-calendar>
-          
-        <ion-text color="light"><h1 class="ion-text-center home">B u y  N o w</h1></ion-text>
-        <ion-grid fixed *ngIf="rooms">
-          <ion-row>
-            <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-              <ion-text color="light">
-                <h3 class="ion-text-center textCss">Details Room</h3>
-              </ion-text>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
-              <ion-text color="light">
-                <p class="txtdescription">Room:</p>
-              </ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
-              <ion-text color="light">
-                <p class="txtdescription">{{room.nombre}}</p>
-              </ion-text>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
-              <ion-text color="light">
-                <p class="txtdescription">Confort:</p>
-              </ion-text>
-            </ion-col>
-            <ion-col size="6" size-lg="3" size-md="4" size-xl="3">
-              <ion-text color="light">
-                <p class="txtdescription">{{room.comodidades}}</p>
-              </ion-text>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        <ion-text color="light">
-          <h4 class="ion-text-center">$500 USD</h4>
-        </ion-text>
-        <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
+        <ion-calendar [(ngModel)]="data" [type]="type" [format]="'YYYY-MM-DD'">
+        </ion-calendar>
+
+
         <ion-row>
           <ion-col size="6">
             <h6 class="steps">Back</h6>
           </ion-col>
           <ion-col size="6">
-            <h6 class="steps r">Next</h6>
+            <h6 class="steps r" (click)="nextStep()">Next</h6>
           </ion-col>
         </ion-row>
       </ion-col>
