--- a/beauty-app/src/app/pages/deposit/deposit.page.scss
+++ b/beauty-app/src/app/pages/deposit/deposit.page.scss
@@ -1,3 +1,11 @@
+.grid-border{
+    border: aliceblue 1px solid;
+}
+.head{
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
+}
 h2,h3,h4,h6,p{
     color: aliceblue;
 }
