--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -44,7 +44,7 @@
 
         <ion-row>
           <ion-col size="6">
-            <h6 class="steps">Back</h6>
+            <h6 class="steps" routerDirection = "back" >Back</h6>
           </ion-col>
           <ion-col size="6">
             <h6 class="steps r" (click)="nextStep()">Next</h6>
