--- a/beauty-app/src/app/pages/inicio/inicio.page.scss
+++ b/beauty-app/src/app/pages/inicio/inicio.page.scss
@@ -4,7 +4,7 @@ h1.home{
 }
 
 ion-content{ 
-    --background: #6a1d8a url('../../../assets/img/background.png') no-repeat center center / cover !important;
+    --background: #6a1d8a url('../../../assets/img/background3.png') no-repeat center center / cover !important;
      }  
 
 .img-home{
