--- a/beauty-app/src/app/pages/login/login.page.html
+++ b/beauty-app/src/app/pages/login/login.page.html
@@ -29,7 +29,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-button expand='block' class="button-login" (click)="login()">Login</ion-button>
+            <ion-button expand='block' class="button-login" (click)="login()">LOGIN</ion-button>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -40,11 +40,11 @@
         <ion-row>
           <ion-col class='ion-text-center'>
             <ion-text color="light">
-              im new, i need
+              You dont have an Account?
             </ion-text>
           </ion-col>
           <ion-col size='12' class='ion-text-center'>
-            <a routerLink="/register" class="reg">create an account</a>
+            <a routerLink="/register" class="reg">Create an Account</a>
           </ion-col>
           <ion-col size='12' class="ion-text-center">
             <a routerLink="/terms" class="reg">Terms And Conditions</a>
