--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -11,12 +11,11 @@
       <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
       <ion-col size="12" size-sm="12" size-md="6" size-lg="4">
         <div>
-          <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="">
+          <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="" routerLink="/tabs/home">
         </div>
         <h3 class="ion-text-center">B u y N o w</h3>
         <img class="img-depos" src="assets/img/pyp/3dplan.jpg" alt="" srcset="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dicta nam esse sit provident ea repellat quos
-          iste, minus est impedit quis quas accusantium assumenda magnam incidunt quam, labore vero.</p>
+        <p></p>
 
           <ion-grid fixed *ngIf="this.hero.dataPurchase.plans.length > 0" >
             <ion-row>
