--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
@@ -1,3 +1,9 @@
+ion-calendar{
+    background: transparent;
+}
+button.days-btn > p {
+    color: aliceblue !important;
+}
 h1{
     margin-top: 0px;
 }
