--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -11,15 +11,15 @@
           <h5>{{data.email}}</h5>
         </div>      
         <ion-toolbar>
-          <ion-segment color="primary-bl" (ionChange)="segmentChanged($event)" value="personalData">
+          <ion-segment color="primary-bl" (ionChange)="segmentChanged($event)" value="photos">
             <ion-segment-button value="personalData">
               <ion-icon name="card"></ion-icon>
             </ion-segment-button>
             <ion-segment-button value="photos">
-              <ion-icon name="camera"></ion-icon>
+              <ion-icon name="alarm"></ion-icon>
             </ion-segment-button>
             <ion-segment-button value="reviewBlog">
-              <ion-icon name="apps"></ion-icon>
+              <ion-icon name="camera"></ion-icon>
             </ion-segment-button>
           </ion-segment>
         </ion-toolbar>
