--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.scss
@@ -1,5 +1,7 @@
 ion-calendar{
     background: transparent;
+    // border: aliceblue 2px solid;
+    border-radius: 49px;
 }
 button.days-btn > p {
     color: aliceblue !important;
