--- a/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.scss
+++ b/beauty-app/src/app/pages/procedures-detail/procedures-detail.page.scss
@@ -1,3 +1,8 @@
+ion-calendar{
+    background: transparent;
+    // border: aliceblue 2px solid;
+    border-radius: 49px;
+}
 img.plans{
     border-radius: 1.5rem;
     margin: 0 auto;
